# dictation

./: .gitignore  LICENSE  README.md  app.py  dictate.py  pyproject.toml
dictation/: For the code I uploaded.docx  dictate.py  dictation.py  hotkey.py  ~$r the code I uploaded.docx  ~WRL3462.tmp
dictation_pkg/: For the code I uploaded.docx  dictation.py  hotkey.py
templates/: index.html
